--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,25 @@
 	"name" : "nvbooster/starter-bundle",
 	"type" : "symfony-bundle",
 	"description" : "starter-bundle",
-	"keywords" : ["Symfony CMF","starter"],
+	"keywords" : [
+		"Symfony CMF",
+		"starter"
+	],
 	"homepage" : "https://github.com/nvbooster/StarterBundle",
-	"license" : "MIT",	
-	"authors" : [
-        {
+	"license" : "MIT",
+	"authors" : [{
 			"name" : "Vyacheslav Nechipurenko",
 			"email" : "nvb@aproxima.ru",
 			"homepage" : "https://github.com/nvbooster"
 		}
 	],
-	"minimum-stability" : "dev"
+	"minimum-stability" : "dev",
+    "require" : {
+        
+    }
+    "autoload" : {
+        "psr-4" : {
+            "nvbooster\\StarterBundle\\" : ""
+        }
+    },	
 }
