--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,28 @@
 		}
 	],
 	"minimum-stability" : "dev",
-    "require" : {
-        
-    },
-    "autoload" : {
-        "psr-4" : {
-            "nvbooster\\StarterBundle\\" : ""
-        }
-    }
+	"require" : {
+	    "symfony/symfony" : "~2.7",	
+	    "jackalope/jackalope-doctrine-dbal" : "1.1.*",
+        "symfony-cmf/symfony-cmf" : "1.2.*",
+        "symfony-cmf/create-bundle" : "1.2.*",
+        "symfony-cmf/routing-bundle" : "1.3.x-dev",
+        "symfony-cmf/routing" : "1.3.x-dev",
+        "helios-ag/fm-elfinder-bundle" : "5.0.5",
+        "liip/imagine-bundle" : "1.3.0",
+        "sonata-project/admin-bundle" : "2.3.3",
+        "sonata-project/intl-bundle" : "~2.1",
+        "sonata-project/doctrine-phpcr-admin-bundle" : "^1.2",
+        "burgov/key-value-form-bundle" : "1.1.0",
+        "phpcr/phpcr-shell" : "^1.0@dev",
+        "ezyang/htmlpurifier" : "4.7.0"
+	},
+	"suggest" : {
+        "eko/feedbundle" : "1.2 for RSS feed reader"
+    },	
+	"autoload" : {
+		"psr-4" : {
+			"nvbooster\\StarterBundle\\" : ""
+		}
+	},
 }
