modified:   Resources/config/sonata_doctrine_phpcr_admin.yml

--- a/Resources/config/sonata_doctrine_phpcr_admin.yml
+++ b/Resources/config/sonata_doctrine_phpcr_admin.yml
@@ -15,8 +15,9 @@ sonata_doctrine_phpcr_admin:
             valid_children: []
         Symfony\Cmf\Bundle\BlockBundle\Doctrine\Phpcr\ActionBlock:
             valid_children: []
-        Symfony\Cmf\Bundle\BlockBundle\Doctrine\Phpcr\SimpleBlock:
-            valid_children: []
+        Symfony\Cmf\Bundle\BlockBundle\Doctrine\Phpcr\SimpleBlock:        
+            valid_children:
+                - Symfony\Cmf\Bundle\BlockBundle\Doctrine\Phpcr\ContainerBlock
         Symfony\Cmf\Bundle\BlockBundle\Doctrine\Phpcr\StringBlock:
             valid_children: []
         Symfony\Cmf\Bundle\BlockBundle\Doctrine\Phpcr\SlideshowBlock:
