--- a/Resources/config/sonata_admin.yml
+++ b/Resources/config/sonata_admin.yml
@@ -51,6 +51,7 @@ sonata_admin:
                 items:
                     - cmf_routing.route_admin
                     - cmf_routing.redirect_route_admin
+                    - nvbooster_starter.routecontainer_admin
             menu:
                 label: Menu
                 items:
