--- a/composer.json
+++ b/composer.json
@@ -16,32 +16,25 @@
 	],
 	"minimum-stability" : "dev",
 	"require" : {
-		"jackalope/jackalope-doctrine-dbal" : "1.1.*",
-		"symfony-cmf/symfony-cmf" : "1.2.*",
-		"symfony-cmf/create-bundle" : "1.2.*",
-		"symfony-cmf/routing-bundle" : "1.3.x-dev",
-		"symfony-cmf/routing" : "1.3.x-dev",
-		"helios-ag/fm-elfinder-bundle" : "5.0.5",
-		"liip/imagine-bundle" : "1.3.0",
-		"sonata-project/admin-bundle" : "2.3.3",
-		"sonata-project/intl-bundle" : "~2.1",
-		"sonata-project/doctrine-phpcr-admin-bundle" : "^1.2",
-		"burgov/key-value-form-bundle" : "1.1.0",
-		"phpcr/phpcr-shell" : "^1.0@dev",
-		"ezyang/htmlpurifier" : "4.7.0"
+        "symfony-cmf/symfony-cmf" : "2.0.*",
+        "symfony-cmf/create-bundle" : "2.0.*",
+		"helios-ag/fm-elfinder-bundle" : "^6.2",
+		"liip/imagine-bundle" : "^1.6",
+		"sonata-project/doctrine-phpcr-admin-bundle" : "^2.0",
+        "sonata-project/admin-bundle" : "^3.2",
+        "sonata-project/translation-bundle" : "^2.0"
 	},
 	"suggest" : {
-		"eko/feedbundle" : "1.2 for RSS feed reader"
+		"symfony-cmf/seo-bundle" : "For metadata and sitemaps",
 	},
 	"autoload" : {
 		"psr-4" : {
 			"nvbooster\\StarterBundle\\" : ""
 		}
+	},
+	"extra" : {
+		"branch-alias" : {
+			"dev-master" : "master"
+		}
 	}
-	,
-    "extra": {
-        "branch-alias": {
-            "dev-master": "master"
-        }
-    }
 }
