--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,13 @@
 	],
 	"minimum-stability" : "dev",
 	"require" : {
-        "symfony-cmf/symfony-cmf" : "2.0.*",
-        "symfony-cmf/create-bundle" : "2.0.*",
+        "symfony-cmf/symfony-cmf" : "^2.0",
+        "jackalope/jackalope-doctrine-dbal" : "~1.1",
+        "symfony-cmf/block-bundle" : "^2.0",
+        "symfony-cmf/create-bundle" : "^2.0",
+        "symfony-cmf/routing" : "^1.4",
+        "symfony-cmf/routing-bundle" : "^2.0",
+        "knplabs/knp-menu" : "^2.0",
 		"helios-ag/fm-elfinder-bundle" : "^6.2",
 		"liip/imagine-bundle" : "^1.6",
 		"sonata-project/doctrine-phpcr-admin-bundle" : "^2.0",
@@ -25,7 +30,7 @@
         "sonata-project/translation-bundle" : "^2.0"
 	},
 	"suggest" : {
-		"symfony-cmf/seo-bundle" : "For metadata and sitemaps",
+		"symfony-cmf/seo-bundle" : "For metadata and sitemaps"
 	},
 	"autoload" : {
 		"psr-4" : {
@@ -34,7 +39,7 @@
 	},
 	"extra" : {
 		"branch-alias" : {
-			"dev-master" : "master"
+			"dev-master" : "master-dev"
 		}
 	}
 }
