--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"jackalope/jackalope-doctrine-dbal" : "~1.1",
 		"symfony-cmf/block-bundle" : "^2.0",
 		"symfony-cmf/create-bundle" : "^2.0",
-		"symfony-cmf/routing" : "^2.0,
+		"symfony-cmf/routing" : "^2.0",
 		"symfony-cmf/routing-bundle" : "^2.0",
 		"knplabs/knp-menu" : "^2.0",
 		"helios-ag/fm-elfinder-bundle" : "^6.2|~7.0|~8.0|~9.0",
