--- a/composer.json
+++ b/composer.json
@@ -16,21 +16,15 @@
 	],
 	"minimum-stability" : "dev",
 	"require" : {
-		"symfony-cmf/symfony-cmf" : "^2.0",
-		"jackalope/jackalope-doctrine-dbal" : "~1.1",
 		"symfony-cmf/block-bundle" : "^2.0",
-		"symfony-cmf/create-bundle" : "^2.0",
-		"symfony-cmf/routing" : "^2.0",
 		"symfony-cmf/routing-bundle" : "^2.0",
-		"knplabs/knp-menu" : "^2.0",
-		"helios-ag/fm-elfinder-bundle" : "^6.2|~7.0|~8.0|~9.0",
-		"liip/imagine-bundle" : "^1.6",
+		"symfony-cmf/menu-bundle" : "^2.0",
 		"sonata-project/doctrine-phpcr-admin-bundle" : "^2.0",
-		"sonata-project/admin-bundle" : "^3.2",
 		"sonata-project/translation-bundle" : "^2.0"
 	},
 	"suggest" : {
-		"symfony-cmf/seo-bundle" : "For metadata and sitemaps"
+		"symfony-cmf/create-bundle" : "For inplace content editing ^2.0",
+		"symfony-cmf/seo-bundle" : "For metadata and sitemaps ^2.0"
 	},
 	"autoload" : {
 		"psr-4" : {
