--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 	"minimum-stability" : "dev",
 	"require" : {
 		"symfony-cmf/block-bundle" : "^2.0",
+		"symfony-cmf/content-bundle" : "^2.0",
 		"symfony-cmf/routing-bundle" : "^2.0",
 		"symfony-cmf/menu-bundle" : "^2.0",
 		"sonata-project/doctrine-phpcr-admin-bundle" : "^2.0",
